--- a/index.html
+++ b/index.html
@@ -1,48 +1,167 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Legal Solution</title>
-    <link rel="icon" type="image/x-icon" href="images/fav.png">
-    <!-- Tailwind and DaisyUI -->
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
-    <script src="https://cdn.tailwindcss.com"></script>
-    <!-- google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Poppins:ital,wght@0,100;0,400;0,600;0,700;1,500&display=swap" rel="stylesheet">
-    <!-- Scripts -->
-    <script>
-        tailwind.config = {
-          theme: {
-            extend: {
-              colors: {
-                clifford: '#da373d',
-              }
-            }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Legal Solution</title>
+  <link rel="icon" type="image/x-icon" href="images/fav.png">
+  <!-- Tailwind and DaisyUI -->
+  <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  <!-- google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Poppins:ital,wght@0,100;0,400;0,600;0,700;1,500&display=swap"
+    rel="stylesheet">
+  <!-- Scripts -->
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            base: '#B68C5A',
           }
         }
-      </script>
-      <!-- Styles -->
-       <style>
-        .font-EBGaramond{
-            font-family: "EB Garamond", serif;
-        }
-        .font-Poppins{
-            font-family: "Poppins", sans-serif;
-        }
-       </style>
+      }
+    }
+  </script>
+  <!-- Styles -->
+  <style>
+    .font-EBGaramond {
+      font-family: "EB Garamond", serif;
+    }
+
+    .font-Poppins {
+      font-family: "Poppins", sans-serif;
+    }
+  </style>
 </head>
+
 <body>
-    <header>
+  <header class="container mx-auto">
+    <!-- Navbar -->
+    <div class="navbar bg-base-100">
+      <div class="navbar-start">
+        <div class="dropdown">
+          <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+              stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" />
+            </svg>
+          </div>
+          <ul tabindex="0"
+            class="menu menu-sm font-Poppins dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
+            <li><a>Home</a></li>
+            <li>
+              <details>
+                <summary>Services</summary>
+                <ul class="p-2">
+                  <li><a>Submenu 1</a></li>
+                  <li><a>Submenu 2</a></li>
+                </ul>
+              </details>
+            </li>
+            <li>
+              <details>
+                <summary>Cases</summary>
+                <ul class="p-2">
+                  <li><a>Submenu 1</a></li>
+                  <li><a>Submenu 2</a></li>
+                </ul>
+              </details>
+            </li>
+            <li>
+              <details>
+                <summary>Blog</summary>
+                <ul class="p-2">
+                  <li><a>Submenu 1</a></li>
+                  <li><a>Submenu 2</a></li>
+                </ul>
+              </details>
+            </li>
+            <li>
+              <details>
+                <summary>Contact us</summary>
+                <ul class="p-2">
+                  <li><a>Submenu 1</a></li>
+                  <li><a>Submenu 2</a></li>
+                </ul>
+              </details>
+            </li>
+          </ul>
+        </div>
+        <a class="btn btn-ghost text-xl"><img src="images/logo2.png" alt=""></a>
+      </div>
+      <div class="navbar-center hidden lg:flex">
+        <ul class="menu menu-horizontal px-1 font-Poppins">
+          <li><a>Home</a></li>
+          <li>
+            <details>
+              <summary>Services</summary>
+              <ul class="p-2">
+                <li><a>Submenu 1</a></li>
+                <li><a>Submenu 2</a></li>
+              </ul>
+            </details>
+          </li>
+          <li>
+            <details>
+              <summary>Cases</summary>
+              <ul class="p-2">
+                <li><a>Submenu 1</a></li>
+                <li><a>Submenu 2</a></li>
+              </ul>
+            </details>
+          </li>
+          <li>
+            <details>
+              <summary>Blog</summary>
+              <ul class="p-2">
+                <li><a>Submenu 1</a></li>
+                <li><a>Submenu 2</a></li>
+              </ul>
+            </details>
+          </li>
+          <li>
+            <details>
+              <summary>Contact us</summary>
+              <ul class="p-2">
+                <li><a>Submenu 1</a></li>
+                <li><a>Submenu 2</a></li>
+              </ul>
+            </details>
+          </li>
+        </ul>
+      </div>
+      <div class="navbar-end">
+        <a class="btn bg-base text-white text-lg font-semibold">Free Consultation</a>
+      </div>
+    </div>
+    <!-- banner -->
+    <div class="hero min-h-[75vh] rounded-2xl"
+      style="background-image: url(images/banner.png);">
+      <div class="hero-overlay bg-opacity-60 rounded-2xl"></div>
+      <div class="hero-content text-neutral-content text-center">
+        <div class="max-w">
+          <h1 class="mb-5 text-7xl font-extrabold font-EBGaramond text-white">We Provide Effective <br> Legal Solutions</h1>
+          <p class="mb-5">
+            There are many variations of passages of Lorem Ipsum available, but the majority <br>have suffered alteration in some form, by injected humour.
+          </p>
+          <input type="search" name="" id="" placeholder="Search your services" class="lg:w-[500px] w-[400px] py-3 px-5 rounded-lg mr-4">
+          <button class="btn bg-base border-none text-poppins text-white font-bold">Get Started</button>
+        </div>
+      </div>
+    </div>
 
-    </header>
-    <main>
+  </header>
+  <main class="container mx-auto">
 
-    </main>
-    <footer>
-        
-    </footer>
+  </main>
+  <footer>
+
+  </footer>
 </body>
+
 </html>
