prectice area added

--- a/index.html
+++ b/index.html
@@ -140,16 +140,18 @@
       </div>
     </div>
     <!-- banner -->
-    <div class="hero min-h-[75vh] rounded-2xl"
-      style="background-image: url(images/banner.png);">
+    <div class="hero min-h-[75vh] rounded-2xl" style="background-image: url(images/banner.png);">
       <div class="hero-overlay bg-opacity-60 rounded-2xl"></div>
       <div class="hero-content text-neutral-content text-center">
         <div class="max-w">
-          <h1 class="mb-5 text-7xl font-extrabold font-EBGaramond text-white">We Provide Effective <br> Legal Solutions</h1>
+          <h1 class="mb-5 text-7xl font-extrabold font-EBGaramond text-white">We Provide Effective <br> Legal Solutions
+          </h1>
           <p class="mb-5">
-            There are many variations of passages of Lorem Ipsum available, but the majority <br>have suffered alteration in some form, by injected humour.
+            There are many variations of passages of Lorem Ipsum available, but the majority <br>have suffered
+            alteration in some form, by injected humour.
           </p>
-          <input type="search" name="" id="" placeholder="Search your services" class="lg:w-[500px] w-[400px] py-3 px-5 rounded-lg mr-4">
+          <input type="search" name="" id="" placeholder="Search your services"
+            class="lg:w-[500px] w-[400px] py-3 px-5 rounded-lg mr-4">
           <button class="btn bg-base border-none text-poppins text-white font-bold">Get Started</button>
         </div>
       </div>
@@ -157,6 +159,99 @@
 
   </header>
   <main class="container mx-auto">
+    <!-- Practice Area -->
+    <section class="mt-20">
+      <h2 class="font-EBGaramond text-5xl font-extrabold text-center">The Legal Practice Area</h2>
+      <p class="font-poppins text-center mt-5">There are many variations of passages of Lorem Ipsum available, but the
+        majority <br>have suffered alteration in some form, by injected humour.</p>
+
+      <div class="grid lg:grid-flow-col grid-flow-row my-20 lg:grid-cols-3 grid-rows-2">
+        <!-- Card 01 -->
+        <div class="card border-r-2 border-b-2 rounded-none">
+          <figure class="px-10 pt-10">
+            <img src="images/business.png" alt="Shoes" class="rounded-xl" />
+          </figure>
+          <div class="card-body items-center text-center">
+            <h2 class="card-title">Business Law</h2>
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
+              in some form, by injected humour.</p>
+            <div class="card-actions">
+              <a href=""><img src="images/Frame.png" alt=""></a>
+            </div>
+          </div>
+        </div>
+        <!-- Card 02 -->
+        <div class="card border-r-2 rounded-none">
+          <figure class="px-10 pt-10">
+            <img src="images/education.png" alt="Shoes" class="rounded-xl" />
+          </figure>
+          <div class="card-body items-center text-center">
+            <h2 class="card-title">Education Law</h2>
+            <p>There are many variations of passages of Lorem Ipsum available, but the
+              majority have suffered alteration in some form, by injected humour.</p>
+            <div class="card-actions">
+              <a href=""><img src="images/Frame.png" alt=""></a>
+            </div>
+          </div>
+        </div>
+        <!-- Card 03 -->
+        <div class="card border-r-2 border-b-2 rounded-none">
+          <figure class="px-10 pt-10">
+            <img src="images/criminal.png" alt="Shoes" class="rounded-xl" />
+          </figure>
+          <div class="card-body items-center text-center">
+            <h2 class="card-title">Criminal Law</h2>
+            <p>There are many variations of passages of Lorem Ipsum available, but the
+              majority have suffered alteration in some form, by injected humour.</p>
+            <div class="card-actions">
+              <a href=""><img src="images/Frame.png" alt=""></a>
+            </div>
+          </div>
+        </div>
+        <!-- Card 04 -->
+        <div class="card border-r-2 rounded-none">
+          <figure class="px-10 pt-10">
+            <img src="images/divorce.png" alt="Shoes" class="rounded-xl" />
+          </figure>
+          <div class="card-body items-center text-center">
+            <h2 class="card-title">Divorce Law</h2>
+            <p>There are many variations of passages of Lorem Ipsum available, but the
+              majority have suffered alteration in some form, by injected humour.</p>
+            <div class="card-actions">
+              <a href=""><img src="images/Frame.png" alt=""></a>
+            </div>
+          </div>
+        </div>
+        <!-- Card 05 -->
+        <div class="card border-b-2 rounded-none">
+          <figure class="px-10 pt-10">
+            <img src="images/child.png" alt="Shoes" class="rounded-xl" />
+          </figure>
+          <div class="card-body items-center text-center">
+            <h2 class="card-title">child Law</h2>
+            <p>There are many variations of passages of Lorem Ipsum available, but the
+              majority have suffered alteration in some form, by injected humour.</p>
+            <div class="card-actions">
+              <a href=""><img src="images/Frame.png" alt=""></a>
+            </div>
+          </div>
+        </div>
+        <!-- Card 06 -->
+        <div class="card rounded-none">
+          <figure class="px-10 pt-10">
+            <img src="images/tax.png" alt="Shoes" class="rounded-xl" />
+          </figure>
+          <div class="card-body items-center text-center">
+            <h2 class="card-title">Tax Law</h2>
+            <p>There are many variations of passages of Lorem Ipsum available, but the
+              majority have suffered alteration in some form, by injected humour.</p>
+            <div class="card-actions">
+              <a href=""><img src="images/Frame.png" alt=""></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
   </main>
   <footer>
